tests/e2e/closing_parenthesis_error.error
Error: syntax error in story at line 1, column 16

1|    a = (my service
                     ^

E0075: Expected closing parenthesis: )
